created logic so that when an animal is entered into the search field, a button populates that is clickable and displays 10 giphs

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>Quoth the Giphy</title>
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Inconsolata|Nunito|Nunito+Sans|Pacifico|Quicksand|Rubik|VT323" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- bootswatch -->
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Inconsolata|Nunito|Nunito+Sans|Pacifico|Quicksand|Rubik|VT323" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -45,31 +49,7 @@
     <div id="gifsGoHere"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript">
-        $("button").on("click", function(){
-            var x = $(this).data("animal");
-            console.log(x);
-            var queryURL = "https://api.giphy.com/v1/gifs/search?q=" +
-            x + "&api_key=7bBdC4gBmRiNNZ24sbtPXdTF2P5OByBI&limit=10";
-
-        $.ajax({
-            url: queryURL,
-            method: "GET"
-        }).then(function(response){
-            console.log(response);
-            for(var i = 0; i < response.data.length; i++){
-                var animalDiv = $("<div>");
-                var p = $("<p>").text("Rating: " + response.data[i].rating);
-                var animalImg = $("<img>");
-                animalImg.attr("src", response.data[i].images.fixed_height.url);
-                animalDiv.prepend(p);
-                animalDiv.prepend(animalImg);
-                $("#gifsGoHere").prepend(animalDiv);
-            }
-        })
-    })
-
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
