created array of topics and looped through them.  user can click on the looped buttons and have the api display.  however the functionality of created topics from form does not work

--- a/index.html
+++ b/index.html
@@ -19,24 +19,13 @@
 <body>
     <h1>Animal Giphy World!!!</h1>
     <div class = "row">
-        <div class = "col-lg-8">
+        <div class = "col-sm-8">
             <div id="buttons">
-                <button data-animal="dog">
-                    woof
-                </button>
-                <button data-animal="cat">
-                    meow
-                </button>
-                <!-- <button data-person="Norm MacDonald">
-                    Note to Self. -->
-                <!-- </button> -->
-                <button data-animal="bird">
-                    chirp
-                </button>
+                <!-- add stuff here -->
             </div>
         </div>
 
-        <div class = "col-lg-4">
+        <div class = "col-sm-4">
 
             <form id="animal-form">
                 <label for="animal-input">Add an Animal!</label>
