page functions, however could be more efficient.  still need to make the giphs be able to from moving to still and vice verse

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <!-- bootswatch -->
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Inconsolata|Nunito|Nunito+Sans|Pacifico|Quicksand|Rubik|VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>Animal Giphy World!!!</h1>
+    <h1>Animal Comedy Giphy World!!!</h1>
     <div class = "row">
         <div class = "col-sm-8">
             <div id="buttons">
