--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- heading -->
-    <h1>Animal Comedy Giphy World!!!</h1>
+    <h1>Giphy World!!!</h1>
     <!-- bootstrap row -->
     <div class="row">
         <!-- left side column  -->
@@ -31,9 +31,9 @@
         </div>
         <!-- right side column with form -->
         <div class="col-sm-4">
-            
+
             <form id="animal-form">
-                <label for="animal-input">Add an Animal!</label>
+                <label for="animal-input">Add Your Favorite Animal or Comedian: </label>
                 <input type="text" id="animal-input"></label>
                 <input id="addAnimal" type="submit" value="submit">
             </form>
